--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-button" type="button">Заказать услугу</button>
+          <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -122,6 +122,9 @@
           <ul class="work-list list">
             <li class="work-item">
               <img src="./images/studio/development.jpg" alt="Разработка" width="370" height="294" />
+              <div class="work-description">
+                <h3 class="work-description-title">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="work-item">
               <img
@@ -130,8 +133,16 @@
                 width="370"
                 height="294"
               />
+              <div class="work-description">
+                <h3 class="work-description-title">Мобильные приложения</h3>
+              </div>
             </li>
-            <li class="work-item"><img src="./images/studio/design.jpg" alt="Дизайн" width="370" height="294" /></li>
+            <li class="work-item">
+              <img src="./images/studio/design.jpg" alt="Дизайн" width="370" height="294" />
+              <div class="work-description">
+                <h3 class="work-description-title">Дизайнерские решения</h3>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -410,5 +421,17 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg width="18" height="18">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
