--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,14 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/technocrack.jpg" alt="Сайт технокряк" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/technocrack.jpg" alt="Сайт технокряк" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -80,7 +87,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/poster.jpg" alt="Постер баскетбольного матча" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/poster.jpg" alt="Постер баскетбольного матча" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -89,7 +103,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/restaurant.jpg" alt="Лого ресторана" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/restaurant.jpg" alt="Лого ресторана" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -98,7 +119,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/project-prime.jpg" alt="Наушники" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/project-prime.jpg" alt="Наушники" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -107,7 +135,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/project-boxes.jpg" alt="Коробки" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/project-boxes.jpg" alt="Коробки" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -116,7 +151,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/inspiration.jpg" alt="Сайт вдохновение" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/inspiration.jpg" alt="Сайт вдохновение" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -125,7 +167,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/magazine.jpg" alt="Статья в журнале" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/magazine.jpg" alt="Статья в журнале" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -134,21 +183,35 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img src="./images/portfolio/project-lab.jpg" alt="Маркетинговый проект" width="370" height="294" />
+                <div class="project-box">
+                  <img src="./images/portfolio/project-lab.jpg" alt="Маркетинговый проект" width="370" height="294" />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title">Проект LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-link portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio/application.jpg"
-                  alt="Приложение растущий бизнес"
-                  width="370"
-                  height="294"
-                />
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <div class="project-box">
+                  <img
+                    src="./images/portfolio/application.jpg"
+                    alt="Приложение растущий бизнес"
+                    width="370"
+                    height="294"
+                  />
+
+                  <p class="project-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-info">
                   <h2 class="portfolio-title" lang="en">Growing Business</h2>
                   <p class="portfolio-text">Приложение</p>
